summative.moria.Moria.scala.error
Compilation error:
Moria:39: error: Boolean does not take parameters
  right();forward();left();forward()
                        ^