summative.moria.Moria.scala.code
var left: Boolean = false

def isFinalePosition(): Boolean = {
  return getGroundColor() == Color.GREEN
}

def pickBaggle() = {
  do{
    forward()
  } while(!isOverBaggle() && !isFacingWall())
  if(isOverBaggle()){
    pickupBaggle()
    right();right()
  }
}

def arrangeBaggle() = {
  do{
     forward()
   } while(!isOverBaggle() && !isFacingWall())
  if(isOverBaggle()){
     backward()
     dropBaggle()
     right();right()
  }
}

def move() = {
  if(isFacingWall()){
    leave()
  } else if(isCarryingBaggle()){
   	arrangeBaggle()
  } else {
  	pickBaggle()
  }
}

def leave() = {
  right();forward();left();forward()
  left = true
}

right();right()
while(!left){
	move()
}